# bookshelfpoetry

./: README.md  pyproject.toml  requirements.txt  serve.py
assets/: bookstyle.css
bookshelfpoetry/: __init__.py  bookshelf.py  dashboard.py
