[tool.poetry]
name = "book-haiku"
version = "0.1.0"
description = ""
authors = ["Marie Roald <roald.marie@gmail.com>"]
readme = "README.md"
packages = [{include = "bookshelfpoetry", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
streamlit = "^1.28.2"
dhlab = "^2.28.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.5"
pandas-stubs = "^2.1.1.230928"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
